--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
 <body>
     <canvas id="carCanvas"></canvas>
+    <div id="verticalButtons">
+        <button onclick="save()">Save</button>
+        <button onclick="discard()">Discard</button>
+    </div>
     <canvas id="networkCanvas"></canvas>
 
     <script src="visualizer.js"></script>
